update swagger api/payment
